# PhysicsBasedAnimationToolkit

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  mkdocs.yml  pyproject.toml  vcpkg.json
bindings/: CMakeLists.txt
bindings/pypbat/: CMakeLists.txt  PythonBindings.cpp
bindings/pypbat/fem/: CMakeLists.txt  Fem.cpp  Fem.h  For.h  Gradient.cpp  Gradient.h  HyperElasticPotential.cpp  HyperElasticPotential.h  Jacobian.cpp  Jacobian.h  Laplacian.cpp  Laplacian.h  LaplacianMatrix.cpp  LaplacianMatrix.h  LoadVector.cpp  LoadVector.h  Mass.cpp  Mass.h  MassMatrix.cpp  MassMatrix.h  Mesh.cpp  Mesh.h  MeshQuadrature.cpp  MeshQuadrature.h  ShapeFunctions.cpp  ShapeFunctions.h  bindings.py  fem.cpp  fem.h
bindings/pypbat/geometry/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  CMakeLists.txt  Geometry.cpp  Geometry.h  HashGrid.cpp  HashGrid.h  HierarchicalHashGrid.cpp  HierarchicalHashGrid.h  MeshBoundary.cpp  MeshBoundary.h  TetrahedralAabbHierarchy.cpp  TetrahedralAabbHierarchy.h  TriangleAabbHierarchy.cpp  TriangleAabbHierarchy.h
bindings/pypbat/geometry/sdf/: BinaryNode.cpp  BinaryNode.h  CMakeLists.txt  Composite.cpp  Composite.h  Primitive.cpp  Primitive.h  Sdf.cpp  Sdf.h  Transform.cpp  Transform.h  UnaryNode.cpp  UnaryNode.h
bindings/pypbat/gpu/: CMakeLists.txt  Gpu.cpp  Gpu.h
bindings/pypbat/gpu/common/: Buffer.cpp  Buffer.h  CMakeLists.txt  Common.cpp  Common.h
bindings/pypbat/gpu/contact/: CMakeLists.txt  Contact.cpp  Contact.h  VertexTriangleMixedCcdDcd.cpp  VertexTriangleMixedCcdDcd.h
bindings/pypbat/gpu/geometry/: Aabb.cpp  Aabb.h  Bodies.cpp  Bodies.h  Bvh.cpp  Bvh.h  BvhQuery.cpp  BvhQuery.h  CMakeLists.txt  Geometry.cpp  Geometry.h  Points.cpp  Points.h  Simplices.cpp  Simplices.h  SweepAndPrune.cpp  (+1 more)
bindings/pypbat/graph/: Adjacency.cpp  Adjacency.h  CMakeLists.txt  Color.cpp  Color.h  Graph.cpp  Graph.h  Mesh.cpp  Mesh.h  Partition.cpp  Partition.h  Partitioning.cpp  Partitioning.h
bindings/pypbat/io/: Archive.cpp  Archive.h  CMakeLists.txt  Io.cpp  Io.h
bindings/pypbat/math/: CMakeLists.txt  Math.cpp  Math.h  MomentFitting.cpp  MomentFitting.h
bindings/pypbat/profiling/: CMakeLists.txt  Profiling.cpp  Profiling.h
bindings/pypbat/sim/: CMakeLists.txt  Sim.cpp  Sim.h
doc/: CMakeLists.txt  build.md  configuration.md  dependencies.md  features.md  gallery.md  install.md  main.md  profiling.md  quickstart.md  userguide.md
doc/html/: header.html
doc/latex/: bibliography.bib
doc/tutorial/: README.md
doc/tutorial/FEM/: README.md  W1.ipynb  W2.ipynb  W3.ipynb  W4.ipynb  W5.ipynb  requirements.txt
doc/tutorial/Geometry/: README.md
doc/tutorial/Numerics/: README.md
doc/tutorial/ROM/: README.md
source/: CMakeLists.txt
source/pbat/: Aliases.h  CMakeLists.txt  DoctestLoadDLL.cpp  DoctestLoadDLL.h  HostDevice.h  Pbat.h
source/pbat/common/: ArgSort.cpp  ArgSort.h  BinaryRadixTree.cpp  BinaryRadixTree.h  BruteSet.cpp  BruteSet.h  CMakeLists.txt  Common.h  Concepts.h  ConstexprFor.h  CountingSort.cpp  CountingSort.h  Eigen.cpp  Eigen.h  Hash.h  Heap.cpp  Heap.h  Indexing.cpp  Indexing.h  Modulo.cpp  Modulo.h  NAryTreeTraversal.cpp  NAryTreeTraversal.h  Overloaded.cpp  Overloaded.h  Permute.cpp  Permute.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h
source/pbat/fem/: CMakeLists.txt  Concepts.h  DeformationGradient.cpp  DeformationGradient.h  DivergenceVector.cpp  DivergenceVector.h  Fem.h  Gradient.cpp  Gradient.h  Hexahedron.h  HyperElasticPotential.cpp  HyperElasticPotential.h  Jacobian.cpp  Jacobian.h  Laplacian.cpp  Laplacian.h  LaplacianMatrix.cpp  LaplacianMatrix.h  Line.h  LoadVector.cpp  LoadVector.h  Mass.cpp  Mass.h  MassMatrix.cpp  MassMatrix.h  Mesh.cpp  Mesh.h  MeshQuadrature.cpp  MeshQuadrature.h  QuadratureRules.h  Quadrilateral.h  ShapeFunctionGradients.cpp  ShapeFunctionGradients.h  ShapeFunctions.cpp  ShapeFunctions.h  Tetrahedron.h  Triangle.h
source/pbat/geometry/: AabbHierarchy.cpp  AabbHierarchy.h  AabbKdTreeHierarchy.cpp  AabbKdTreeHierarchy.h  AabbRadixTreeHierarchy.cpp  AabbRadixTreeHierarchy.h  AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.h  CMakeLists.txt  ClosestPointQueries.cpp  ClosestPointQueries.h  DistanceQueries.cpp  DistanceQueries.h  EdgeEdgeCcd.cpp  EdgeEdgeCcd.h  Geometry.h  HashGrid.cpp  HashGrid.h  HierarchicalHashGrid.cpp  HierarchicalHashGrid.h  IntersectionQueries.cpp  IntersectionQueries.h  KdTree.cpp  KdTree.h  MeshBoundary.cpp  MeshBoundary.h  Morton.cpp  Morton.h  NearestNeighbourSearch.cpp  NearestNeighbourSearch.h  OverlapQueries.cpp  OverlapQueries.h  PointTriangleCcd.cpp  PointTriangleCcd.h  SpatialSearch.cpp  SpatialSearch.h  TetrahedralAabbHierarchy.cpp  TetrahedralAabbHierarchy.h  (+2 more)
source/pbat/gpu/: Aliases.h  CMakeLists.txt  DisableWarnings.h  Gpu.h
source/pbat/graph/: Adjacency.cpp  Adjacency.h  BreadthFirstSearch.cpp  BreadthFirstSearch.h  CMakeLists.txt  Color.cpp  Color.h  ConnectedComponents.cpp  ConnectedComponents.h  DepthFirstSearch.cpp  DepthFirstSearch.h  DisjointSetUnionFind.cpp  DisjointSetUnionFind.h  Enums.h  Graph.h  Mesh.cpp  Mesh.h  Partition.cpp  Partition.h
source/pbat/io/: Archive.cpp  Archive.h  CMakeLists.txt  Concepts.cpp  Concepts.h  Io.cpp  Io.h
source/pbat/math/: CMakeLists.txt  Concepts.h  GaussQuadrature.cpp  GaussQuadrature.h  IntegerArithmeticChecks.cpp  IntegerArithmeticChecks.h  LinearOperator.cpp  LinearOperator.h  Math.h  MomentFitting.cpp  MomentFitting.h  PolynomialBasis.cpp  PolynomialBasis.h  Rational.cpp  Rational.h  SymmetricQuadratureRules.cpp  SymmetricQuadratureRules.h
source/pbat/physics/: CMakeLists.txt  Enums.cpp  Enums.h  HyperElasticity.cpp  HyperElasticity.h  Physics.h  SaintVenantKirchhoffEnergy.cpp  SaintVenantKirchhoffEnergy.h  StableNeoHookeanEnergy.cpp  StableNeoHookeanEnergy.h
source/pbat/profiling/: CMakeLists.txt  Profiling.cpp  Profiling.h
source/pbat/sim/: CMakeLists.txt  Sim.h
source/pbat/warning/: CMakeLists.txt  FloatConversion.h  OldStyleCast.h  Pop.h  Push.h  SignCompare.h  SignConversion.h
tests/: CMakeLists.txt  tests.cpp
(+1577 files in other folders)
