[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pbatoolkit"
version = "0.0.6"
description = "Physics Based Animation Toolkit"
readme = "README.md"
readme-content-type = "text/markdown"
authors = [
    { name = "Quoc-Minh Ton-That", email = "tonthat.quocminh@gmail.com" },
]
requires-python = ">=3.10"
license = { text = "BSL-1.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy >= 1, < 2",
    "scipy >= 1"
]

[tool.scikit-build]
minimum-version = "0.9"
wheel.packages = ["python/pbatoolkit"]
wheel.exclude = ["include", "lib", "share"]
cmake.version = ">=3.26"
cmake.build-type = "Release"
cmake.targets = ["PhysicsBasedAnimationToolkit_Python"]
cmake.verbose = true
logging.level = "INFO"
build-dir = "build/{wheel_tag}"

[project.urls]
Homepage = "https://github.com/Q-Minh/PhysicsBasedAnimationToolkit"
Documentation = "https://github.com/Q-Minh/PhysicsBasedAnimationToolkit#readme"
Source = "https://github.com/Q-Minh/PhysicsBasedAnimationToolkit"
Tracker = "https://github.com/Q-Minh/PhysicsBasedAnimationToolkit/issues"

[tool.cmake]
# Example of CMake options that might be configured
# Change or add more options as needed
options = [
    "-DPBAT_BUILD_PYTHON_BINDINGS=ON",
    "-DPBAT_ENABLE_PROFILER=OFF",
    "-DPBAT_USE_INTEL_MKL=OFF",
    "-DPBAT_USE_SUITESPARSE=OFF"
]
