[build-system]
requires = ["scikit-build-core", "nanobind", "dlltracer"]
build-backend = "scikit_build_core.build"

[project]
name = "pbatoolkit"
version = "0.0.11"
description = "Physics Based Animation Toolkit"
readme = "README.md"
authors = [
    { name = "Quoc-Minh Ton-That", email = "tonthat.quocminh@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = ["numpy >= 1", "scipy >= 1"]

[project.optional-dependencies]
all = []

[tool.scikit-build]
minimum-version = "0.9"
wheel.packages = ["python/pbatoolkit"]
wheel.exclude = ["include", "lib", "share"]
cmake.version = ">=3.26"
cmake.build-type = "Release"
cmake.targets = [
    "PhysicsBasedAnimationToolkit_Python",
    "PhysicsBasedAnimationToolkit_PythonStub"
]
cmake.verbose = true
logging.level = "INFO"
build-dir = "build/{wheel_tag}"

[project.urls]
Homepage = "https://github.com/Q-Minh/PhysicsBasedAnimationToolkit"
